# sdcpy-studio

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  render.yaml  sdcpy-preview.csv
.github/workflows/: ci.yml  docker-publish.yml  ghcr-cleanup.yml
docs/: custom-upload-fix-plan.md  sdc_explained.md
scripts/: prewarm-map-cache.py  run-e2e-with-api.mjs
sdcpy_studio/: __init__.py  jobs.py  main.py  map_cache.py  schemas.py  service.py
sdcpy_studio/data/: oni_temp_sa.csv
sdcpy_studio/static/: app.css  app.js
sdcpy_studio/templates/: index.html
tests/: test_api.py  test_map_cache.py
tests/e2e/: basic-flow.spec.ts
tests/fixtures/: map_custom_driver.csv  map_custom_field.nc
