[project]
name = "sdcpy-studio"
version = "0.1.0"
description = "Modern web studio for interactive Scale-Dependent Correlation analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"
authors = [
  {name = "Alejandro Fontal", email = "alejandrofontal92@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "sdcpy>=0.7.1",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.12",
  "pandas>=2.0.2",
  "numpy>=1.24.3",
  "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8.0",
  "httpx>=0.27.0",
]

[project.scripts]
sdcpy-studio = "sdcpy_studio.main:run"

[project.urls]
Repository = "https://github.com/AlFontal/sdcpy-studio"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sdcpy_studio"]
include = [
  "sdcpy_studio/templates/*.html",
  "sdcpy_studio/static/*.css",
  "sdcpy_studio/static/*.js",
  "sdcpy_studio/static/*.svg",
  "sdcpy_studio/data/*.csv",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["sdcpy_studio"]
